docker/iptables.conf
# Generated by iptables-save v1.4.21 on Fri Jun 26 22:25:23 2020
*nat
:PREROUTING ACCEPT [102413:7870198]
:INPUT ACCEPT [5440:944713]
:OUTPUT ACCEPT [671:40408]
:POSTROUTING ACCEPT [1489:91200]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-be71abc95759 -j MASQUERADE
-A POSTROUTING -s 172.22.0.0/16 ! -o br-7f78256d0c4d -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-7cf56fae1005 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-14cf7dd30759 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-53c2413ba9a6 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-99b6476bfa79 -j MASQUERADE
-A POSTROUTING -s 172.23.0.3/32 -d 172.23.0.3/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.2/32 -d 172.23.0.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.5/32 -d 172.23.0.5/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.6/32 -d 172.23.0.6/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.8/32 -d 172.23.0.8/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.9/32 -d 172.23.0.9/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.10/32 -d 172.23.0.10/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.12/32 -d 172.23.0.12/32 -p tcp -m tcp --dport 15672 -j MASQUERADE
-A POSTROUTING -s 172.23.0.12/32 -d 172.23.0.12/32 -p tcp -m tcp --dport 5672 -j MASQUERADE
-A POSTROUTING -s 172.23.0.13/32 -d 172.23.0.13/32 -p tcp -m tcp --dport 3000 -j MASQUERADE
-A POSTROUTING -s 172.23.0.18/32 -d 172.23.0.18/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.19/32 -d 172.23.0.19/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.20/32 -d 172.23.0.20/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.21/32 -d 172.23.0.21/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.23/32 -d 172.23.0.23/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.22/32 -d 172.23.0.22/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.24/32 -d 172.23.0.24/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.25/32 -d 172.23.0.25/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.31/32 -d 172.23.0.31/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.32/32 -d 172.23.0.32/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.34/32 -d 172.23.0.34/32 -p tcp -m tcp --dport 5432 -j MASQUERADE
-A POSTROUTING -s 172.23.0.35/32 -d 172.23.0.35/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.36/32 -d 172.23.0.36/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.37/32 -d 172.23.0.37/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.38/32 -d 172.23.0.38/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.39/32 -d 172.23.0.39/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.40/32 -d 172.23.0.40/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.41/32 -d 172.23.0.41/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.11/32 -d 172.23.0.11/32 -p tcp -m tcp --dport 8443 -j MASQUERADE
-A POSTROUTING -s 172.23.0.11/32 -d 172.23.0.11/32 -p tcp -m tcp --dport 8001 -j MASQUERADE
-A POSTROUTING -s 172.23.0.11/32 -d 172.23.0.11/32 -p tcp -m tcp --dport 8000 -j MASQUERADE
-A POSTROUTING -s 172.23.0.11/32 -d 172.23.0.11/32 -p tcp -m tcp --dport 7946 -j MASQUERADE
-A POSTROUTING -s 172.23.0.11/32 -d 172.23.0.11/32 -p udp -m udp --dport 7946 -j MASQUERADE
-A POSTROUTING -s 172.23.0.43/32 -d 172.23.0.43/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.42/32 -d 172.23.0.42/32 -p tcp -m tcp --dport 1936 -j MASQUERADE
-A POSTROUTING -s 172.23.0.42/32 -d 172.23.0.42/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.23.0.7/32 -d 172.23.0.7/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.17/32 -d 172.23.0.17/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.26/32 -d 172.23.0.26/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.30/32 -d 172.23.0.30/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.44/32 -d 172.23.0.44/32 -p tcp -m tcp --dport 443 -j MASQUERADE
-A POSTROUTING -s 172.23.0.44/32 -d 172.23.0.44/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A POSTROUTING -s 172.23.0.14/32 -d 172.23.0.14/32 -p tcp -m tcp --dport 9029 -j MASQUERADE
-A POSTROUTING -s 172.23.0.16/32 -d 172.23.0.16/32 -p tcp -m tcp --dport 44004 -j MASQUERADE
-A POSTROUTING -s 172.23.0.15/32 -d 172.23.0.15/32 -p tcp -m tcp --dport 33003 -j MASQUERADE
-A POSTROUTING -s 172.23.0.27/32 -d 172.23.0.27/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.23.0.28/32 -d 172.23.0.28/32 -p tcp -m tcp --dport 7000 -j MASQUERADE
-A POSTROUTING -s 172.23.0.4/32 -d 172.23.0.4/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-be71abc95759 -j RETURN
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32768 -j DNAT --to-destination 172.23.0.3:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32769 -j DNAT --to-destination 172.23.0.2:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32771 -j DNAT --to-destination 172.23.0.5:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32772 -j DNAT --to-destination 172.23.0.6:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32774 -j DNAT --to-destination 172.23.0.8:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32775 -j DNAT --to-destination 172.23.0.9:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32776 -j DNAT --to-destination 172.23.0.10:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 15672 -j DNAT --to-destination 172.23.0.12:15672
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 5672 -j DNAT --to-destination 172.23.0.12:5672
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32777 -j DNAT --to-destination 172.23.0.13:3000
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32781 -j DNAT --to-destination 172.23.0.18:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32782 -j DNAT --to-destination 172.23.0.19:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32783 -j DNAT --to-destination 172.23.0.20:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32784 -j DNAT --to-destination 172.23.0.21:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32785 -j DNAT --to-destination 172.23.0.23:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32786 -j DNAT --to-destination 172.23.0.22:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32787 -j DNAT --to-destination 172.23.0.24:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32788 -j DNAT --to-destination 172.23.0.25:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32793 -j DNAT --to-destination 172.23.0.31:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32794 -j DNAT --to-destination 172.23.0.32:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32795 -j DNAT --to-destination 172.23.0.34:5432
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32796 -j DNAT --to-destination 172.23.0.35:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32797 -j DNAT --to-destination 172.23.0.36:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32798 -j DNAT --to-destination 172.23.0.37:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32799 -j DNAT --to-destination 172.23.0.38:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32800 -j DNAT --to-destination 172.23.0.39:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32801 -j DNAT --to-destination 172.23.0.40:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32802 -j DNAT --to-destination 172.23.0.41:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 8443 -j DNAT --to-destination 172.23.0.11:8443
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 8001 -j DNAT --to-destination 172.23.0.11:8001
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 172.23.0.11:8000
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 7946 -j DNAT --to-destination 172.23.0.11:7946
-A DOCKER ! -i br-be71abc95759 -p udp -m udp --dport 7946 -j DNAT --to-destination 172.23.0.11:7946
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.23.0.43:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 1936 -j DNAT --to-destination 172.23.0.42:1936
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 9080 -j DNAT --to-destination 172.23.0.42:80
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32803 -j DNAT --to-destination 172.23.0.7:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32807 -j DNAT --to-destination 172.23.0.17:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32808 -j DNAT --to-destination 172.23.0.26:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32809 -j DNAT --to-destination 172.23.0.30:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 443 -j DNAT --to-destination 172.23.0.44:443
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.23.0.44:80
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32811 -j DNAT --to-destination 172.23.0.14:9029
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32812 -j DNAT --to-destination 172.23.0.16:44004
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 33003 -j DNAT --to-destination 172.23.0.15:33003
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32813 -j DNAT --to-destination 172.23.0.27:8080
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32814 -j DNAT --to-destination 172.23.0.28:7000
-A DOCKER ! -i br-be71abc95759 -p tcp -m tcp --dport 32815 -j DNAT --to-destination 172.23.0.4:8080
COMMIT
# Completed on Fri Jun 26 22:25:23 2020
# Generated by iptables-save v1.4.21 on Fri Jun 26 22:25:23 2020
*filter
:INPUT ACCEPT [311000:39178221]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [307060:39521038]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-be71abc95759 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-be71abc95759 -j DOCKER
-A FORWARD -i br-be71abc95759 ! -o br-be71abc95759 -j ACCEPT
-A FORWARD -i br-be71abc95759 -o br-be71abc95759 -j ACCEPT
-A FORWARD -o br-7f78256d0c4d -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-7f78256d0c4d -j DOCKER
-A FORWARD -i br-7f78256d0c4d ! -o br-7f78256d0c4d -j ACCEPT
-A FORWARD -i br-7f78256d0c4d -o br-7f78256d0c4d -j ACCEPT
-A FORWARD -o br-7cf56fae1005 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-7cf56fae1005 -j DOCKER
-A FORWARD -i br-7cf56fae1005 ! -o br-7cf56fae1005 -j ACCEPT
-A FORWARD -i br-7cf56fae1005 -o br-7cf56fae1005 -j ACCEPT
-A FORWARD -o br-14cf7dd30759 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-14cf7dd30759 -j DOCKER
-A FORWARD -i br-14cf7dd30759 ! -o br-14cf7dd30759 -j ACCEPT
-A FORWARD -i br-14cf7dd30759 -o br-14cf7dd30759 -j ACCEPT
-A FORWARD -o br-53c2413ba9a6 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-53c2413ba9a6 -j DOCKER
-A FORWARD -i br-53c2413ba9a6 ! -o br-53c2413ba9a6 -j ACCEPT
-A FORWARD -i br-53c2413ba9a6 -o br-53c2413ba9a6 -j ACCEPT
-A DOCKER -d 172.23.0.3/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.2/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.5/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.6/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.8/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.9/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.10/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.12/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 15672 -j ACCEPT
-A DOCKER -d 172.23.0.12/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 5672 -j ACCEPT
-A DOCKER -d 172.23.0.13/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER -d 172.23.0.18/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.19/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.20/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.21/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.23/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.22/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.24/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.25/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.31/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.32/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.34/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 5432 -j ACCEPT
-A DOCKER -d 172.23.0.35/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.36/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.37/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.38/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.39/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.40/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.41/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.11/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8443 -j ACCEPT
-A DOCKER -d 172.23.0.11/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8001 -j ACCEPT
-A DOCKER -d 172.23.0.11/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8000 -j ACCEPT
-A DOCKER -d 172.23.0.11/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 7946 -j ACCEPT
-A DOCKER -d 172.23.0.11/32 ! -i br-be71abc95759 -o br-be71abc95759 -p udp -m udp --dport 7946 -j ACCEPT
-A DOCKER -d 172.23.0.43/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.42/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 1936 -j ACCEPT
-A DOCKER -d 172.23.0.42/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 172.23.0.7/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.17/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.26/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.30/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.44/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 172.23.0.44/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 172.23.0.14/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 9029 -j ACCEPT
-A DOCKER -d 172.23.0.16/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 44004 -j ACCEPT
-A DOCKER -d 172.23.0.15/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 33003 -j ACCEPT
-A DOCKER -d 172.23.0.27/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.23.0.28/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 7000 -j ACCEPT
-A DOCKER -d 172.23.0.4/32 ! -i br-be71abc95759 -o br-be71abc95759 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-be71abc95759 ! -o br-be71abc95759 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-be71abc95759 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Fri Jun 26 22:25:23 2020
